--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-configuration2</artifactId>
+      <version>2.2</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <parent>
   	<groupId>de.julielab</groupId>
