--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,12 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
@@ -92,6 +95,6 @@
     <parent>
         <groupId>de.julielab</groupId>
         <artifactId>julielab-parent</artifactId>
-        <version>2.1.2-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
 </project>
