--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>3.0.7</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>commons-jxpath</groupId>
             <artifactId>commons-jxpath</artifactId>
             <version>1.3</version>
