Adding the license element to the POM.

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
         <artifactId>julielab-parent</artifactId>
         <version>2.4.1</version>
     </parent>
+    <licenses>
+        <license>
+            <name>BSD-2-Clause</name>
+            <url>https://opensource.org/licenses/BSD-2-Clause</url>
+        </license>
+    </licenses>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
